--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,8 @@
       "use": "@vercel/python",
       "config": {
         "runtime": "python3.9",
-        "maxLambdaSize": "15mb"
+        "maxLambdaSize": "15mb",
+        "buildCommand": "cd firstproject && python manage.py collectstatic --noinput"
       }
     }
   ],
