--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,30 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "api/index.py",
-      "use": "@vercel/python",
-      "config": {
-        "runtime": "python3.9",
-        "maxLambdaSize": "15mb",
-        "buildCommand": "cd firstproject && python manage.py collectstatic --noinput"
-      }
+    "version": 2,
+    "builds": [
+        {
+            "src": "firstproject/firstproject/wsgi.py",
+            "use": "@vercel/python",
+            "config": {
+                "maxLambdaSize": "15mb",
+                "runtime": "python3.9"
+            }
+        }
+    ],
+    "routes": [
+        {
+            "src": "/static/(.*)",
+            "dest": "/static/$1"
+        },
+        {
+            "src": "/media/(.*)",
+            "dest": "/media/$1"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "firstproject/firstproject/wsgi.py"
+        }
+    ],
+    "env": {
+        "PYTHONPATH": "firstproject"
     }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "api/index.py"
-    }
-  ]
 }
